# otus-rust

./: README.md
homework_01/: homework.md
homework_02/: Makefile  homework.md
homework_02/smart/src/: main.rs
homework_03/: Makefile  homework.md
homework_03/smart2/: Cargo.toml
homework_03/smart2/src/: main.rs
homework_04/: Makefile  homework.md
homework_04/smart_home/src/: house.rs  room.rs
homework_04/smart_home/tests/: device_tests.rs  house_tests.rs
homework_05/: Makefile  homework.md
homework_05/smart_home/examples/: usage.rs
homework_05/smart_home/src/: house.rs  room.rs
homework_06/: Makefile  homework.md
homework_06/smart_home/src/: lib.rs
homework_07/: Makefile  homework.md
homework_08/: Makefile  homework.md
homework_08/examples/: Cargo.toml
homework_08/smart_home/src/: house.rs
homework_09/: Makefile  homework.md
homework_09/smart_home/: Cargo.toml
homework_10/: Makefile  homework.md
homework_11/: homework.md
homework_12/: Makefile  homework.md
homework_13/: Makefile  homework.md
homework_13/examples/: Cargo.toml  README.md  Rocket.toml
homework_13/examples/axum_ex/: Cargo.toml  readme.md
homework_13/examples/axum_ex/src/: counter.rs  error.rs  main.rs  mysq.rs
homework_13/examples/rocket_ex/: Cargo.toml  readme.md
homework_13/examples/rocket_ex/src/: counter.rs  error.rs  main.rs
homework_13/smart_home/: Cargo.toml
homework_14/: Makefile  homework.md
homework_14/smart_home/: Cargo.toml
homework_15/: Makefile  homework.md
homework_15/examples/: Cargo.toml
homework_15/smart_home/: Cargo.toml
(+77 files in other folders)
