[package]
name = "axum_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.14"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "mysql", "json"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
